--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1903,6 +1903,9 @@ body {
   padding-top: 90px;
   padding-bottom: 90px;
 }
+.cid-rz9dWccGgu H2 {
+  color: #ffffff;
+}
 .cid-rz9dHOa4pv {
   padding-top: 90px;
   padding-bottom: 90px;
@@ -2082,6 +2085,68 @@ body {
     height: auto !important;
   }
 }
+.cid-rCsWu9zwWw {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-rCsWu9zwWw .mbr-slider .carousel-control {
+  background: #1b1b1b;
+}
+.cid-rCsWu9zwWw .mbr-slider .carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-rCsWu9zwWw .mbr-slider .carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-rCsWu9zwWw .mbr-slider .modal-body .close {
+  background: #1b1b1b;
+}
+.cid-rCsWu9zwWw .mbr-gallery-item > div::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #554346;
+  opacity: 0;
+  -webkit-transition: 0.2s opacity ease-in-out;
+  transition: 0.2s opacity ease-in-out;
+  background: linear-gradient(to left, #554346, #45505b) !important;
+}
+.cid-rCsWu9zwWw .mbr-gallery-item > div:hover .mbr-gallery-title::before {
+  background: transparent !important;
+}
+.cid-rCsWu9zwWw .mbr-gallery-item > div:hover:before {
+  opacity: 0.8 !important;
+}
+.cid-rCsWu9zwWw .mbr-gallery-title {
+  font-size: .9em;
+  position: absolute;
+  display: block;
+  width: 100%;
+  bottom: 0;
+  padding: 1rem;
+  color: #fff;
+  z-index: 2;
+}
+.cid-rCsWu9zwWw .mbr-gallery-title:before {
+  content: " ";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  position: absolute;
+  background: #554346 !important;
+  opacity: 0.8;
+  -webkit-transition: 0.2s background ease-in-out;
+  transition: 0.2s background ease-in-out;
+  background: linear-gradient(to left, #554346, #45505b) !important;
+}
 .cid-rz9eecQZA7 {
   padding-top: 90px;
   padding-bottom: 90px;
@@ -2092,7 +2157,7 @@ body {
   background: #000;
 }
 .cid-rz9eecQZA7 .mbr-section-subtitle {
-  color: #767676;
+  color: #465052;
 }
 .cid-rz9eecQZA7 .carousel-item {
   -webkit-justify-content: center;
@@ -2286,6 +2351,9 @@ body {
   .cid-rz9eecQZA7 .carousel-inner.slides6 .cloneditem-5 {
     display: block;
   }
+}
+.cid-rz9eecQZA7 H2 {
+  color: #465052;
 }
 .cid-rz9ejdom2E {
   padding-top: 30px;
